--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Responsividade</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
+<body>
     <div class="wrapper">
 
         <section class="container-left">
@@ -29,12 +30,10 @@
                 <a> About </a>
                 <a> Contact </a>
             </header>
-            <img alt="girl-cellphone" src="./img/Illustration-3-3.png">
+            <img alt="girl-cellphone" src="./assets/Illustration-3-3.png">
         </section>
 
     </div>
-<body>
-
 </body>
 
 </html> 
